Fix typo in Russian translation of Methodology chapter

--- a/src/templates/ru/2020/methodology.html
+++ b/src/templates/ru/2020/methodology.html
@@ -466,7 +466,7 @@
       <h2 id="looking-ahead"><a href="#looking-ahead" class="anchor-link">Перспективы на будущее</a></h2>
 
       <p>
-        Выпуск Web Almanac в 2020 году — второй по счёту, который, как мы надеемся, станет продолжением ежегодной традицией по оценке позитивных изменений в жизни веб-сообщества. Выпуск очередного этого отчёта стал возможным благодаря колоссальной работе, проделанной множеством самоотверженных <a href="{{ url_for('contributors', year=year, lang=lang) }}">участников</a>, и мы будем использовать как можно эффективнее результаты этой работы, чтобы сделать будущие выпуски ещё более лучше.
+        Выпуск Web Almanac в 2020 году — второй по счёту, который, как мы надеемся, станет продолжением ежегодной традиции по оценке позитивных изменений в жизни веб-сообщества. Выпуск очередного этого отчёта стал возможным благодаря колоссальной работе, проделанной множеством самоотверженных <a href="{{ url_for('contributors', year=year, lang=lang) }}">участников</a>, и мы будем использовать как можно эффективнее результаты этой работы, чтобы сделать будущие выпуски ещё более лучше.
       </p>
 
       <p>
