Make Oxford comma optional per language

--- a/src/templates/en/base.html
+++ b/src/templates/en/base.html
@@ -57,6 +57,7 @@ Our mission is to combine the raw stats and trends of the HTTP Archive with the 
 
 {% block and %}and{% endblock %}
 {% block comma %}, {% endblock %}
+{% block oxford_comma %}, {% endblock %}
 
 {% block open %}Open{% endblock %}
 {% block close %}Close{% endblock %}
