--- a/src/templates/es/base.html
+++ b/src/templates/es/base.html
@@ -57,6 +57,7 @@
 
 {% block and %}y{% endblock %}
 {% block comma %}, {% endblock %}
+{% block oxford_comma %} {% endblock %}
 
 {% block open %}Abrir{% endblock %}
 {% block close %}Cerrar{% endblock %}
