--- a/src/templates/fr/base.html
+++ b/src/templates/fr/base.html
@@ -57,6 +57,7 @@ Notre mission est de combiner les statistiques brutes et les tendances de HTTP A
 
 {% block and %}et{% endblock %}
 {% block comma %}, {% endblock %}
+{% block oxford_comma %}{% endblock %}
 
 {% block open %}Ouvrez{% endblock %}
 {% block close %}Fermez{% endblock %}
