--- a/src/templates/hi/base.html
+++ b/src/templates/hi/base.html
@@ -57,6 +57,7 @@
 
 {% block and %}और{% endblock %}
 {% block comma %}, {% endblock %}
+{% block oxford_comma %}{% endblock %}
 
 {% block open %}खोलें{% endblock %}
 {% block close %}बंद करें{% endblock %}
