--- a/src/templates/ja/base.html
+++ b/src/templates/ja/base.html
@@ -57,6 +57,7 @@
 
 {% block and %} と {% endblock %}
 {% block comma %}、{% endblock %}
+{% block oxford_comma %}{% endblock %}
 
 {% block open %}開く{% endblock %}
 {% block close %}閉じる{% endblock %}
