--- a/src/templates/nl/base.html
+++ b/src/templates/nl/base.html
@@ -57,6 +57,7 @@
 
 {% block and %}en{% endblock %}
 {% block comma %}, {% endblock %}
+{% block oxford_comma %}{% endblock %}
 
 {% block open %}Open{% endblock %}
 {% block close %}Sluit{% endblock %}
