--- a/src/templates/ru/base.html
+++ b/src/templates/ru/base.html
@@ -57,6 +57,7 @@
 
 {% block and %}и{% endblock %}
 {% block comma %}, {% endblock %}
+{% block oxford_comma %}{% endblock %}
 
 {% block open %}Открыть{% endblock %}
 {% block close %}Закрыть{% endblock %}
