--- a/src/templates/zh-CN/base.html
+++ b/src/templates/zh-CN/base.html
@@ -57,6 +57,7 @@
 
 {% block and %}和{% endblock %}
 {% block comma %}、{% endblock %}
+{% block oxford_comma %}{% endblock %}
 
 {% block open %}打开{% endblock %}
 {% block close %}关闭{% endblock %}
