--- a/src/templates/base/base_ebook.html
+++ b/src/templates/base/base_ebook.html
@@ -390,7 +390,8 @@
           {% endif %}
           <div class="contributor-teams">
             {% for id in contributor.teams | sort() %}
-              {% if loop.last and loop.length > 1 %} {{ self.and() }} {% endif %}<span class="contributor-team team-{{ id }}">{{ localizedTeamNames[id] if localizedTeamNames[id]|length else team.name }}</span>{{ self.comma() if not loop.last and loop.length > 2 }}
+              <span class="contributor-team team-{{ id }}">{{ localizedTeamNames[id] if localizedTeamNames[id]|length else team.name }}</span>{% if loop.length > 2 %}{{ self.comma() if loop.index < loop.length - 1 }}{{ self.oxford_comma() if loop.index == loop.length - 1 }}{% endif %}
+              {% if loop.index == loop.length - 1 %}{{ self.and() }}{% endif %}
             {% endfor %}
           </div>
         </div>
