--- a/src/templates/base/contributors.html
+++ b/src/templates/base/contributors.html
@@ -345,7 +345,8 @@
 
         <div class="contributor-teams">
           {% for id in contributor.teams | sort() %}
-          {% if loop.last and loop.length > 1 %} {{ self.and() }} {% endif %}<span class="contributor-team team-{{ id }}">{{ localizedTeamNames[id] if localizedTeamNames[id]|length else team.name }}</span>{{ self.comma() if not loop.last and loop.length > 2 }}
+          <span class="contributor-team team-{{ id }}">{{ localizedTeamNames[id] if localizedTeamNames[id]|length else team.name }}</span>{% if loop.length > 2 %}{{ self.comma() if loop.index < loop.length - 1 }}{{ self.oxford_comma() if loop.index == loop.length - 1 }}{% endif %}
+          {% if loop.index == loop.length - 1 %}{{ self.and() }}{% endif %}
           {% endfor %}
         </div>
       </li>
