--- a/src/templates/pt/base.html
+++ b/src/templates/pt/base.html
@@ -57,6 +57,7 @@ Nossa missão é combinar as estatísticas brutas e as tendências do HTTP Archi
 
 {% block and %}e{% endblock %}
 {% block comma %}, {% endblock %}
+{% block oxford_comma %}{% endblock %}
 
 {% block open %}Abrir{% endblock %}
 {% block close %}Fechar{% endblock %}
