--- a/src/templates/zh-TW/base.html
+++ b/src/templates/zh-TW/base.html
@@ -57,6 +57,7 @@
 
 {% block and %}和{% endblock %}
 {% block comma %}, {% endblock %}
+{% block oxford_comma %}{% endblock %}
 
 {% block open %}開啟{% endblock %}
 {% block close %}關閉{% endblock %}
