--- a/src/templates/it/base.html
+++ b/src/templates/it/base.html
@@ -17,7 +17,8 @@
 
 {% block mission %}
 <p>
-La nostra missione è combinare le statistiche grezze e le tendenze del HTTP Archive con l'esperienza della comunità web. Il Web Almanac è un rapporto completo sullo stato del web, supportato da dati reali e da esperti web di fiducia. È composto da {{supported_chapters | length}} capitoli che abbracciano aspetti del page content, user experience, publishing e distribution.</p>
+La nostra missione è combinare le statistiche grezze e le tendenze del HTTP Archive con l'esperienza della comunità web. Il Web Almanac è un rapporto completo sullo stato del web, supportato da dati reali e da esperti web di fiducia. È composto da {{supported_chapters | length}} capitoli che abbracciano aspetti del page content, user experience, publishing e distribution.
+</p>
 {% endblock %}
 {% block read_last_years_almanac %}Leggi il Web Almanac del {{ year | int - 1 }}{% endblock %}
 
@@ -97,7 +98,6 @@ La nostra missione è combinare le statistiche grezze e le tendenze del HTTP Arc
 {% endif %}
 
 {% block contributors_description %}
-The Web Almanac has been made possible by the hard work of the web community. {{ self.contributors() }} people have volunteered countless hours in the planning, research, writing and production phases.
 Il Web Almanac è stato reso possibile grazie al duro lavoro della web community. {{self.contributors() }} persone si sono offerte volontarie per innumerevoli ore nelle fasi di pianificazione, ricerca, scrittura e produzione.
 {% endblock %}
 {% block contributors_link %}Vedi i contributori{% endblock %}
@@ -122,10 +122,10 @@ Il Web Almanac è stato reso possibile grazie al duro lavoro della web community
 
 {%
   set localizedPartTitles = {
-    "I. Page Content": "I. Page Content",
-    "II. User Experience": "II. User Experience",
-    "III. Content Publishing": "III. Content Publishing",
-    "IV. Content Distribution": "IV. Content Distribution"
+    "I. Page Content": "I. Contenuto della Pagina",
+    "II. User Experience": "II. L'Esperienza Utente",
+    "III. Content Publishing": "III. Pubblicazione di Contenuti",
+    "IV. Content Distribution": "IV. Distribuzione dei Contenuti"
   }
 %}
 {%
@@ -160,9 +160,9 @@ Il Web Almanac è stato reso possibile grazie al duro lavoro della web community
   "analysts": "Analisti",
   "authors": "Autori",
   "brainstormers": "Brainstormers",
-  "designers": "Designers",
-  "developers": "Developers",
-  "editors": "Editors",
+  "designers": "Designer",
+  "developers": "Sviluppatori",
+  "editors": "Editori",
   "leads": "Responsabili del progetto",
   "reviewers": "Revisori",
   "translators": "Traduttori",
