Fix and update files

--- a/src/templates/it/base.html
+++ b/src/templates/it/base.html
@@ -65,10 +65,12 @@ La nostra missione è combinare le statistiche grezze e le tendenze del HTTP Arc
 {% block reviewed_by_before %}Revisionata da{% endblock %}
 {% block translated_by_before %}Tradotta da{% endblock %}
 {% block analysis_by_before %}Analizzata da{% endblock %}
+{% block edited_by_before %}Modificato da{% endblock %}
 {% block written_by_after %}{% endblock %}
 {% block reviewed_by_after %}{% endblock %}
 {% block translated_by_after %}{% endblock %}
 {% block analysis_by_after %}{% endblock %}
+{% block edited_by_after %}{% endblock %}
 
 {% block unedited %}[Inedito]{% endblock %}
 
