--- a/src/templates/en/2020/stories/content_publishing.html
+++ b/src/templates/en/2020/stories/content_publishing.html
@@ -1301,7 +1301,7 @@
       </amp-story-grid-layer>
       <amp-story-page-attachment layout="nodisplay" href="https://almanac.httparchive.org/en/2020/" data-cta-text="Web Almanac 2020" class="i-amphtml-layout-nodisplay" hidden="hidden" i-amphtml-layout="nodisplay"></amp-story-page-attachment>
     </amp-story-page>
-    <amp-analytics type="gtag" data-credentials="include" class="i-amphtml-layout-fixed i-amphtml-layout-size-defined pixel" style="width:1px;height:1px;" i-amphtml-layout="fixed">
+    <amp-analytics type="gtag" data-credentials="include" class="i-amphtml-layout-fixed i-amphtml-layout-size-defined pixel" i-amphtml-layout="fixed">
       <script type="application/json">
         {
           "vars": {
