--- a/src/templates/it/base.html
+++ b/src/templates/it/base.html
@@ -34,7 +34,7 @@ La nostra missione è combinare le statistiche grezze e le tendenze del HTTP Arc
 
 {% block home %}Pagina iniziale{% endblock %}
 {% block table_of_contents_title %}Sommario{% endblock %}
-{% block contributors_title %}Contributori{% endblock %}
+{% block contributors_title %} Collaboratori{% endblock %}
 {% block methodology_title %}Metodologia{% endblock %}
 
 {% block part %}Parte{% endblock %}
