--- a/src/templates/it/base.html
+++ b/src/templates/it/base.html
@@ -53,6 +53,7 @@ La nostra missione è combinare le statistiche grezze e le tendenze del HTTP Arc
 
 {% block and %}e{% endblock %}
 {% block comma %}, {% endblock %}
+{% block oxford_comma %}{% endblock %}
 
 {% block open %}Apri{% endblock %}
 {% block close %}Chiudi{% endblock %}
