Apply suggestions from code review
These seem pretty obvious so committing them.

Co-authored-by: Giovanni Puntil <puntilgiovanni@gmail.com>

--- a/src/templates/it/2019/base.html
+++ b/src/templates/it/2019/base.html
@@ -21,7 +21,7 @@ Se non diversamente specificato, le metriche in tutti i 20 capitoli del Web Alma
   </p>
 
   <p>
-    C'è così tanto da imparare in questo rapporto, quindi inizia a esplorare e condividere i tuoi suggerimenti con la comunità in modo che possiamo far progredire collettivamente la nostra comprensione dello stato del Web.
+    C'è così tanto da imparare in questo report, quindi inizia a esplorare e condividere i tuoi suggerimenti con la comunità in modo che possiamo far progredire collettivamente la nostra comprensione dello stato del Web.
   </p>
 
   <p>— <em><a href="{{ url_for('contributors', year=year, lang=lang, _anchor='rviscomi') }}">Rick Viscomi</a>, Web Almanac Editor-in-Chief</em></p>
