--- a/src/templates/it/2019/contributors.html
+++ b/src/templates/it/2019/contributors.html
@@ -1,8 +1,8 @@
 {% extends "base/contributors.html" %}
 
-{% block title %}2019 Collaboratori | Le Web Almanac di HTTP Archive{% endblock %}
+{% block title %}2019 Collaboratori | Il Web Almanac di HTTP Archive{% endblock %}
 
-{% block description %}Le {{ config.contributors.items() | length }} persone che hanno contribuito al 2019 Web Almanac as Analisti, Autori, Brainstormers, Designer, Sviluppatori, Editori, Revisori e Traduttori.{% endblock %}
+{% block description %}Le {{ config.contributors.items() | length }} persone che hanno contribuito al 2019 Web Almanac come Analisti, Autori, Brainstormers, Designer, Sviluppatori, Editori, Revisori e Traduttori.{% endblock %}
 
 {% block filter_by_team %}Filtra per squadra: <span id="filtered-contributors">{{ self.contributors() }}</span><span id="contributors-total-text" class="hidden"> di <span id="contributors-total">{{ config.contributors.items() | length }}</span></span> collaboratori.{% endblock %}
 {% block filter_by %}Filtra per{% endblock %}
