--- a/src/templates/fr/2019/base.html
+++ b/src/templates/fr/2019/base.html
@@ -1,7 +1,7 @@
 {% extends "%s/base.html" % lang %}
 
 {% block methodology_stat_1 %}5,8&nbsp;M{% endblock %}
-{% block methodology_stat_2 %}20,9&nbsp;TB{% endblock %}
+{% block methodology_stat_2 %}20,9&nbsp;To{% endblock %}
 {% block methodology_description %}
 Sauf indication contraire, les statistiques des 20 chapitres du Web Almanac proviennent du jeu de données HTTP Archive, un projet communautaire qui suit l’évolution de la construction du web depuis 2010. Grâce à WebPageTest et Lighthouse, HTTP Archive collecte chaque mois les métadonnées de près de 6 millions de sites Web et les insère dans une base de données publique BigQuery pour les analyser. Le jeu de données de juillet 2019 a servi de base aux mesures du Web Almanac. Pour plus d’informations, consultez la page Méthodologie.
 {% endblock %}
