--- a/src/templates/it/base.html
+++ b/src/templates/it/base.html
@@ -107,7 +107,7 @@ La nostra missione è combinare le statistiche grezze e le tendenze del HTTP Arc
 {% block contributors_description %}
 Il Web Almanac è stato reso possibile grazie al duro lavoro della web community. {{self.contributors() }} persone si sono offerte volontarie per innumerevoli ore nelle fasi di pianificazione, ricerca, scrittura e produzione.
 {% endblock %}
-{% block contributors_link %}Vedi i contributori{% endblock %}
+{% block contributors_link %}Vedi i collaboratori{% endblock %}
 
 {% block methodology_stat_1_title %}Siti web testati{% endblock %}
 {% block methodology_stat_2_title %}Dati trattati{% endblock %}
