--- a/src/templates/ua/base_chapter.html
+++ b/src/templates/ua/base_chapter.html
@@ -2,9 +2,9 @@
 
 {% block title %}{{ metadata.get('title') }} | {{ year }} | Web Almanac від HTTP Archive{% endblock %}
 
-{% block description %}'Розділ ' + metadata.get('description',metadata.get('title')) + ' у Web Almanac ' + year + ' року досліджує, як використовується ' + metadata.get('description',metadata.get('title')) + ' у вебі.'{% endblock %}
+{% block description %}'Розділ ' + metadata.get('description',metadata.get('title')) + ' у Web Almanac ' + year + ' досліджує, як використовується ' + metadata.get('description',metadata.get('title')) + ' у вебі.'{% endblock %}
 
-{% block twitter_image_alt %}Зображення до розділу {{ metadata.get('title') }} у Web Almanac {{ year }} року{% endblock %}
+{% block twitter_image_alt %}Зображення до розділу {{ metadata.get('title') }} у Web Almanac {{ year }}{% endblock %}
 
 {% block prev_next_title %}Навігація до попереднього чи наступного розділу{% endblock %}
 
