--- a/src/templates/ua/2019/contributors.html
+++ b/src/templates/ua/2019/contributors.html
@@ -1,8 +1,8 @@
 {% extends "base/contributors.html" %}
 
-{% block title %}Контриб'ютори {{ year }} року | Web Almanac від HTTP Archive{% endblock %}
+{% block title %}Контриб'ютори 2019 року | Web Almanac від HTTP Archive{% endblock %}
 
-{% block description %}{{ config.contributors.items() | length }} неймовірних людей, які долучилися до створення Web Almanac {{ year }} як аналітики, автори, дизайнери, розробники, редактори, керівники, коректори та перекладачі.{% endblock %}
+{% block description %}{{ config.contributors.items() | length }} неймовірних людей, які долучилися до створення Web Almanac 2019 як аналітики, автори, дизайнери, розробники, редактори, керівники, коректори та перекладачі.{% endblock %}
 
 {% block filter_by_team %}Фільтрувати за роллю в команді: <span id="filtered-contributors">{{ self.contributors() }}</span><span id="contributors-total-text" class="hidden"> з <span id="contributors-total">{{ config.contributors.items() | length }}</span></span> контриб'юторів.{% endblock %}
 {% block filter_by %}Фільтрувати за{% endblock %}
