--- a/src/templates/ua/2020/base.html
+++ b/src/templates/ua/2020/base.html
@@ -3,7 +3,7 @@
 {% block methodology_stat_1 %}7,5&nbsp;млн{% endblock %}
 {% block methodology_stat_2 %}31,3&nbsp;ТБ{% endblock %}
 {% block methodology_description %}
-Якщо не вказано інше, метрики в усіх 22 розділах Web Almanac взяті з датасету HTTP Archive. HTTP Archive – це громадський проєкт, що відслідковує, як будується веб з 2010 року. Метадата про більш ніж 7,5 мільйонів вебсайтів тестується щомісяця, використовуючи WebPageTest та Lighthouse, і додається до публічної бази даних BigQuery для аналізу. Набір даних від серпня 2020 року був використаний як базис для метрик Web Almanac. Більше інформації на сторінці Методологія.
+Якщо не вказано інше, метрики в усіх 22 розділах Web Almanac взяті з датасету HTTP Archive. HTTP Archive – це громадський проєкт, що відслідковує, як будується веб з 2010. Метадата про більш ніж 7,5 мільйонів вебсайтів тестується щомісяця, використовуючи WebPageTest та Lighthouse, і додається до публічної бази даних BigQuery для аналізу. Для метрик Web Almanac був використаний як базис набір даних від серпня 2020 року. Більше інформації на сторінці Методологія.
 {% endblock %}
 
 
