--- a/src/templates/ua/2019/base.html
+++ b/src/templates/ua/2019/base.html
@@ -3,7 +3,7 @@
 {% block methodology_stat_1 %}5,8&nbsp;млн{% endblock %}
 {% block methodology_stat_2 %}20,9&nbsp;ТБ{% endblock %}
 {% block methodology_description %}
-Якщо не вказано інше, метрики в усіх 20 розділах Web Almanac взяті з датасету HTTP Archive. HTTP Archive – це громадський проєкт, що відслідковує, як будується веб з 2010. Метадата про більш ніж 6 мільйонів веб-сайтів тестується щомісяця, використовуючи WebPageTest та Lighthouse, і додається до публічної бази даних BigQuery для аналізу. Для метрик Web Almanac був використаний як базис набір даних від липня 2019 року. Більше інформації на сторінці Методологія.
+Якщо не вказано інше, метрики в усіх 20 розділах Web Almanac взяті з датасету HTTP Archive. HTTP Archive – це громадський проєкт, що відслідковує, як будується веб з 2010 року. Метадата про більш ніж 6 мільйонів веб-сайтів тестується щомісяця, використовуючи WebPageTest та Lighthouse, і додається до публічної бази даних BigQuery для аналізу. Для метрик Web Almanac був використаний як базис набір даних від липня 2019 року. Більше інформації на сторінці Методологія.
 {% endblock %}
 
 {% block foreword %}
