--- a/src/templates/ua/2019/base.html
+++ b/src/templates/ua/2019/base.html
@@ -3,12 +3,12 @@
 {% block methodology_stat_1 %}5,8&nbsp;млн{% endblock %}
 {% block methodology_stat_2 %}20,9&nbsp;ТБ{% endblock %}
 {% block methodology_description %}
-Якщо не вказано інше, метрики в усіх 20 розділах Web Almanac взяті з датасету HTTP Archive. HTTP Archive – це громадський проєкт, що відслідковує, як будується веб з 2010 року. Метадата про більш ніж 6 мільйонів веб-сайтів тестується щомісяця, використовуючи WebPageTest та Lighthouse, і додається до публічної бази даних BigQuery для аналізу. Для метрик Web Almanac був використаний як базис набір даних від липня 2019 року. Більше інформації на сторінці Методологія.
+Якщо не вказано інше, метрики в усіх 20 розділах Web Almanac взяті з датасету HTTP Archive. HTTP Archive – це громадський проект, що відслідковує, як будується веб з 2010 року. Метадата про більш ніж 6 мільйонів веб-сайтів тестується щомісяця, використовуючи WebPageTest та Lighthouse, і додається до публічної бази даних BigQuery для аналізу. Для метрик Web Almanac був використаний як базис набір даних від липня 2019 року. Більше інформації на сторінці Методологія.
 {% endblock %}
 
 {% block foreword %}
   <p>
-    Відкритий веб це неймовірно складна мережа технологій, що постійно розвивається. Цілі індустрії та кар’єри побудовані на вебі і залежать від того, наскільки успішною буде його тремтлива екосистема. Так само важливим, як і сам веб, розуміння того, як йдуть його справи, було на диво невловимим. З 2010 року метою HTTP Archive було відстежувати, як будується веб, і цей проєкт успішно справлявся зі своєю задачею. Однак була одна прогалина, яку було заповнити надзвичайно важко: надати зрозумілої форми даним, які збирав HTTP Archive, та дати змогу спільноті без зайвих зусиль зрозуміти, як працює веб. Ось тут і стає в нагоді Web Almanac.
+    Відкритий веб це неймовірно складна мережа технологій, що постійно розвивається. Цілі індустрії та кар’єри побудовані на вебі і залежать від того, наскільки успішною буде його тремтлива екосистема. Так само важливим, як і сам веб, розуміння того, як йдуть його справи, було на диво невловимим. З 2010 року метою HTTP Archive було відстежувати, як будується веб, і цей проект успішно справлявся зі своєю задачею. Однак була одна прогалина, яку було заповнити надзвичайно важко: надати зрозумілої форми даним, які збирав HTTP Archive, та дати змогу спільноті без зайвих зусиль зрозуміти, як працює веб. Ось тут і стає в нагоді Web Almanac.
   </p>
 
   <p>
