--- a/src/templates/ua/base.html
+++ b/src/templates/ua/base.html
@@ -67,10 +67,10 @@
 {% macro hide_description(metadata, id) %}Сховати пояснення до рис. {{ figure_id(metadata, id) }}{% endmacro %}
 
 {% block written_by_before %}Автори: {% endblock %}
-{% block reviewed_by_before %}Редактори: {% endblock %}
+{% block reviewed_by_before %}Рецензенти: {% endblock %}
 {% block translated_by_before %}Перекладачі: {% endblock %}
 {% block analysis_by_before %}Аналітики: {% endblock %}
-{% block edited_by_before %}Коректори: {% endblock %}
+{% block edited_by_before %}Редактори: {% endblock %}
 {% block written_by_after %}{% endblock %}
 {% block reviewed_by_after %}{% endblock %}
 {% block translated_by_after %}{% endblock %}
@@ -169,9 +169,9 @@
   "brainstormers": "Творча група",
   "designers": "Дизайнери",
   "developers": "Розробники",
-  "editors": "Коректори",
+  "editors": "Редактори",
   "leads": "Керівники проектів",
-  "reviewers": "Редактори",
+  "reviewers": "Рецензенти",
   "translators": "Перекладачі"
   }
 %}
