--- a/src/templates/ru/base_chapter.html
+++ b/src/templates/ru/base_chapter.html
@@ -16,7 +16,7 @@
 {% block queries %}Посмотреть запросы{% endblock %}
 {% block results %}Посмотреть результаты{% endblock %}
 {% block figure_sql %}Посмотреть запрос{% endblock %}
-{% block figure_data %}Посмотреть данных{% endblock %}
+{% block figure_data %}Посмотреть данные{% endblock %}
 {% block figure_image %}Посмотреть изображения{% endblock %}
 
 {% block previous %}Предыдущая глава (нажмите 'p' или ','){% endblock %}
