--- a/src/templates/en/base.html
+++ b/src/templates/en/base.html
@@ -16,7 +16,7 @@
 {% endblock %}
 
 {% block intro_title %}Web Almanac{% endblock %}
-{% block intro_sub_title %}HTTP Archive's annual<br> <b>state of the web</b> report{% endblock %}
+{% block intro_sub_title %}HTTP Archive&#8217;s annual<br> <b>state of the web</b> report{% endblock %}
 
 {% block mission %}
 <p>
