--- a/src/templates/nl/2020/methodology.html
+++ b/src/templates/nl/2020/methodology.html
@@ -56,7 +56,7 @@
         <h2 id="overview"><a href="#overview" class="anchor-link">Overzicht</a></h2>
 
         <p>
-          De Web Almanac is een project georganiseerd door <a href="https://httparchive.org">HTTP Archive</a>. HTTP Archive is in 2010 opgericht door Steve Souders met de missie om bij te houden hoe het web is opgebouwd. Het evalueert maandelijks de samenstelling van miljoenen webpagina's en stelt zijn terabytes aan metadata beschikbaar voor analyse op <a href="https://httparchive.org/faq#how-do-i-use-bigquery-to- write-custom-queries-over-the-data">BigQuery</a>.
+          De Web Almanac is een project georganiseerd door <a href="https://httparchive.org">HTTP Archive</a>. HTTP Archive is in 2010 opgericht door Steve Souders met de missie om bij te houden hoe het web is opgebouwd. Het evalueert maandelijks de samenstelling van miljoenen webpagina's en stelt zijn terabytes aan metadata beschikbaar voor analyse op <a href="https://httparchive.org/faq#how-do-i-use-bigquery-to-write-custom-queries-over-the-data">BigQuery</a>.
         </p>
 
         <p>
@@ -243,7 +243,7 @@
       </p>
 
       <p>
-        Het privé-exemplaar van WebPageTest van HTTP Archive wordt gesynchroniseerd met de laatste openbare versie en aangevuld met <a href="https://github.com/HTTPArchive/legacy.httparchive.org/tree/master/custom_metrics">aangepaste statistieken</a>. Dit zijn fragmenten van JavaScript die aan het einde van de test op elke website worden geëvalueerd. Dankzij de <a href="https://github.com/HTTPArchive/legacy.httparchive.org/commits/master/custom_metrics">bijdragen</a> van veel data-analisten, vooral de <a href="https: //github.com/HTTPArchive/legacy.httparchive.org/pulls?q=is%3Apr+author%3ATiggerito+sort%3Acreated-asc">enorme inspanningen</a> van <a href="{{ url_for('contributors', year=year, lang=lang, _anchor ='Tiggerito') }}">Tony McCreath</a>, de 2020-editie van de Web Almanac heeft de mogelijkheden van de testinfrastructuur van HTTP Archive aanzienlijk uitgebreid met meer dan 3.000 regels nieuwe code.
+        Het privé-exemplaar van WebPageTest van HTTP Archive wordt gesynchroniseerd met de laatste openbare versie en aangevuld met <a href="https://github.com/HTTPArchive/legacy.httparchive.org/tree/master/custom_metrics">aangepaste statistieken</a>. Dit zijn fragmenten van JavaScript die aan het einde van de test op elke website worden geëvalueerd. Dankzij de <a href="https://github.com/HTTPArchive/legacy.httparchive.org/commits/master/custom_metrics">bijdragen</a> van veel data-analisten, vooral de <a href="https://github.com/HTTPArchive/legacy.httparchive.org/pulls?q=is%3Apr+author%3ATiggerito+sort%3Acreated-asc">enorme inspanningen</a> van <a href="{{ url_for('contributors', year=year, lang=lang, _anchor ='Tiggerito') }}">Tony McCreath</a>, de 2020-editie van de Web Almanac heeft de mogelijkheden van de testinfrastructuur van HTTP Archive aanzienlijk uitgebreid met meer dan 3.000 regels nieuwe code.
       </p>
 
       <p>
